--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "parcel ./src/index.html",
-    "build": "parcel build"
+    "start": "parcel ./src/index.html --open",
+    "build": "parcel build ./src/index.html"
   },
   "repository": {
     "type": "git",
